--- a/dmc-ui/src/app/datacapture/pages/upload/components/upload/upload.component.html
+++ b/dmc-ui/src/app/datacapture/pages/upload/components/upload/upload.component.html
@@ -17,6 +17,57 @@
 
   <!-- Overview -->
   <div class="flex-box">
+
+
+
+
+
+    <nz-collapse [nzBordered]="false" *ngIf=" metaData$ | async as  metaData">
+      <nz-collapse-panel #p nzHeader="Plugin" [ngStyle]="{
+        background: '#f7f7f7', 'border-radius': '4px', border: '0px'}" [nzExpandedIcon]="expandedIcon">
+        <!-- overview -->
+        <nz-descriptions>
+          <nz-descriptions-item nzTitle="file Name">{{metaData?.fileName}}</nz-descriptions-item>
+          <nz-descriptions-item nzTitle="Extention">{{metaData?.fileExtension}}</nz-descriptions-item>
+          <nz-descriptions-item nzTitle="Domain Name">{{metaData?.superDomain}}</nz-descriptions-item>
+          <nz-descriptions-item nzTitle="Selected Pipe">{{metaData?.pipe}}</nz-descriptions-item>
+          <nz-descriptions-item nzTitle="Selected Mapping">{{metaData?.mappingName}}</nz-descriptions-item>
+        </nz-descriptions>
+
+        <form nz-form [nzLayout]="'inline'" [formGroup]="validateForm" (ngSubmit)="onCreatePlugin()" class="plugin">
+
+          <nz-form-item class="plugin-select">
+            <nz-select ngModel='IMPORT_PLUGIN' formControlName="pluginType">
+              <nz-option nzLabel='Import Plugin' nzValue='IMPORT_PLUGIN'></nz-option>
+              <nz-option nzLabel='Export Plugin' nzValue='EXPORT_PLUGIN' nzDisabled></nz-option>
+            </nz-select>
+          </nz-form-item>
+
+          <nz-form-item style="width: 60%">
+            <input formControlName="pluginName" nz-input placeholder="Plugin Name" />
+          </nz-form-item>
+
+          <nz-form-item>
+            <nz-form-control>
+              <button nz-button nzType="primary" [nzLoading]="isCreating">Create</button>
+            </nz-form-control>
+          </nz-form-item>
+
+        </form>
+
+      </nz-collapse-panel>
+
+
+    </nz-collapse>
+
+    <ng-template #expandedIcon let-active>
+      {{ active }}
+      <i nz-icon nzType="double-right" class="ant-collapse-arrow" [nzRotate]="expandedIcon ? 90 : -90"></i>
+    </ng-template>
+
+
+
+
     <app-overview [metaData]="metaData$ | async" class="mt-4"></app-overview>
     <app-upload-tags [metaData]="metaData$ | async" (tagsChanged)="selectedTags = $event" class="mt-2">
     </app-upload-tags>
