Update plugin node

--- a/dmc-ui/src/app/datacapture/pages/upload/components/upload/upload.component.html
+++ b/dmc-ui/src/app/datacapture/pages/upload/components/upload/upload.component.html
@@ -43,11 +43,11 @@
             </nz-select>
           </nz-form-item>
 
-          <nz-form-item style="width: 60%">
+          <nz-form-item class="plugin-input">
             <input formControlName="pluginName" nz-input placeholder="Plugin Name" />
           </nz-form-item>
 
-          <nz-form-item>
+          <nz-form-item class="plugin-btn">
             <nz-form-control>
               <button nz-button nzType="primary" [nzLoading]="isCreating">Create</button>
             </nz-form-control>
