--- a/dmc-ui/src/app/datacapture/pages/automatic-upload/setup/nodes/other/node-plugin/node-plugin.component.html
+++ b/dmc-ui/src/app/datacapture/pages/automatic-upload/setup/nodes/other/node-plugin/node-plugin.component.html
@@ -9,12 +9,15 @@
         <nz-form-label class="text-left" [nzSm]="24" nzRequired>Domain</nz-form-label>
         <nz-form-control [nzSm]="24">
           <div>
-            <i nz-icon class="pr-3" nzType="block" nzTheme="outline" [class.text-danger]="!(data.domain_id)"></i>
-            <nz-select [(ngModel)]="data.domain_id" (ngModelChange)="selectDomain($event)" class="wd-80" nzShowSearch
-              [ngModelOptions]="{standalone: true}" nzAllowClear nzPlaceHolder="Select a Domain">
-              <nz-option *ngFor="let domain of domains$ | async" [nzLabel]="domain.name" [nzValue]="domain.id">
-              </nz-option>
-            </nz-select>
+            <i nz-icon class="pr-3" nzType="block" nzTheme="outline" [class.text-danger]="!(domain?.name)"></i>
+            <button [class.req-input]="!(domain?.name)" nz-button nz-dropdown [nzDropdownMenu]="menu" class="wd-80"
+              [nzPlacement]="'bottomRight'">
+              <div style="min-width:200px" class="flex between">
+                <div class="flex-1 text-left">{{ (domain?.name) || 'None' }}</div>
+                <i style="opacity: 0.5;" nz-icon nzType="down" nzTheme="outline"
+                  [class.text-danger]="!(domain?.name)"></i>
+              </div>
+            </button>
           </div>
         </nz-form-control>
       </nz-form-item>
@@ -25,8 +28,8 @@
         <nz-form-control [nzSm]="24">
           <div>
             <i nz-icon class="pr-3" nzType="block" nzTheme="outline" [class.text-danger]="!(data.plugin_id)"></i>
-            <nz-select [(ngModel)]="data.plugin_id" nzAllowClear (ngModelChange)="selectPlugin($event)" class="wd-80" nzShowSearch
-              [ngModelOptions]="{standalone: true}" nzPlaceHolder="Select a plugin">
+            <nz-select [(ngModel)]="data.plugin_id" nzAllowClear (ngModelChange)="selectPlugin($event)" class="wd-80"
+              nzShowSearch [ngModelOptions]="{standalone: true}" nzPlaceHolder="Select a plugin">
               <nz-option *ngFor="let plugin of plugins$ | async" [nzLabel]="plugin.name" [nzValue]="plugin.id">
               </nz-option>
             </nz-select>
@@ -36,6 +39,8 @@
       </nz-form-item>
       <!-- END Plugins -->
 
+      <h1> plugins {{plugins$ | async | json }}</h1>
+
     </form>
   </div>
 
@@ -44,3 +49,21 @@
     <button nz-button nzType='primary' (click)='save()' [disabled]="!(data.plugin_id && data.domain_id)">Save</button>
   </div>
 </div>
+
+
+<nz-dropdown-menu #menu="nzDropdownMenu">
+  <ul nz-menu>
+    <li *ngFor="let item of keys(domains)" nz-submenu [nzTitle]="domainTemplate">
+      <ng-template #domainTemplate>
+        <i nz-icon nzType="folder" nzTheme="outline"></i>
+        {{item}}
+      </ng-template>
+      <ul>
+        <li *ngFor="let domain of domains[item]" nz-menu-item (click)="selectDomain(domain)">
+          <i nz-icon nzType="block" nzTheme="outline"></i>
+          {{domain.name}}
+        </li>
+      </ul>
+    </li>
+  </ul>
+</nz-dropdown-menu>
