--- a/dmc-ui/src/app/datacapture/pages/upload/components/upload/upload.component.css
+++ b/dmc-ui/src/app/datacapture/pages/upload/components/upload/upload.component.css
@@ -23,6 +23,11 @@
   height: 100%;
 }
 
-.plugin-select {
-  width: 30%;
+.plugin-select,
+.plugin-btn {
+  width: 20%;
+}
+
+.plugin-input{
+  width: 40%;
 }
